--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,8 @@
         "cstdint": "cpp",
         "functional": "cpp",
         "utility": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "deque": "cpp",
+        "vector": "cpp"
     }
 }
